# ad3-compressie

./: .comprimeer1.c.swp  CMakeLists.txt  comprimeer1.c  comprimeer1.h  comprimeer2.c  comprimeer2.h  huffman_tree.c  huffman_tree.h  linkedlist.c  linkedlist.h  main.c  sources
ad3/Debug/: compressie
src/: comprimeer1.c  comprimeer1.h  comprimeer2.c  comprimeer2.h  huffman_tree.c  huffman_tree.h  linkedlist.c  linkedlist.h
src/algemeen/: comprimeer1.c  comprimeer1.h  huffman_tree.c  huffman_tree.h  linkedlist.h
src/specifiek/: comprimeer2.c  comprimeer2.h
tests/: correctness_test.c  correctness_test.h  generate_test_files.c  generate_test_files.h
